Apache Solr Language Identifier
                            Release Notes

This file describes changes to the SolrTika Language Identifier (contrib/langid) module.
See http://wiki.apache.org/solr/LanguageDetection for details


$Id$

================== Release 3.6.0 ==================

(No Changes)

================== Release 3.5.0 ==================

Initial release.  See README.txt.

* SOLR-1979: New contrib "langid". Adds language identification capabilities as an 
  Update Processor, using Tika's LanguageIdentifier (janhoy, Tommaso Teofili, gsingers)

* SOLR-2839: Add alternative implementation supporting 53 languages, 
  based on http://code.google.com/p/language-detection/ (rmuir)